--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" sizes="72x72" href="assets/img/ico/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" href="assets/img/ico/apple-touch-icon-57x57.png">
 
-    <title>Kompleet by Distinctive Themes</title>
+    <title>Herault-tourisme</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
